# safetensors-streaming

./: .gitignore  CLAUDE.md  GPU_CLI_BUGS.md  LICENSE  README.md  gpu.jsonc  pyproject-cuda.toml  pyproject.toml  requirements-dev.txt
.beads/: issues.jsonl  metadata.json
.claude/skills/implement-bd/: SKILL.md
.claude/skills/plan-to-beads/: SKILL.md
.github/workflows/: ci.yml  release.yml
benches/: benchmark.py  compare.py  compare_diffusers.py  compare_large.py  compare_sentence_transformers.py  compare_sharded.py  compare_transformers.py  compare_vllm.py
crates/: Cargo.toml
crates/sst-buffer/: Cargo.toml
crates/sst-buffer/src/: error.rs  lib.rs
crates/sst-cache/: Cargo.toml
crates/sst-cache/src/: lib.rs
crates/sst-cli/: Cargo.toml
crates/sst-cli/src/: main.rs
crates/sst-core/: Cargo.toml
crates/sst-core/src/: error.rs  header.rs  lib.rs  pipeline.rs  types.rs
crates/sst-fetch/: Cargo.toml
crates/sst-fetch/src/: error.rs  lib.rs  xet.rs
crates/sst-gpu/: Cargo.toml
crates/sst-gpu/src/: copy.rs  error.rs  lib.rs  pinned.rs  pipeline.rs
crates/sst-python/: Cargo.toml
crates/sst-python/src/: lib.rs
crates/sst-types/: Cargo.toml
crates/sst-types/src/: lib.rs
python-cuda/safetensors_streaming_cu12/: __init__.py
python/safetensors_streaming/: __init__.py  hub.py  patch.py  progress.py
scripts/: build-wheels.sh
tests/: test_transformers.py
