[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "safetensors-streaming"
version = "0.1.0"
description = "Stream safetensors files from HTTP/S3 directly to GPU memory"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "James Lal", email = "james@littlebearlabs.io" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/lightsofapollo/safetensors-streaming"
Issues = "https://github.com/lightsofapollo/safetensors-streaming/issues"

[tool.maturin]
manifest-path = "crates/sst-python/Cargo.toml"
module-name = "safetensors_streaming.safetensors_streaming"
python-source = "python"
features = ["pyo3/extension-module"]
