[package]
name = "sst-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["xet"]
xet = ["sst-fetch/xet"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
sst-types = { workspace = true }
sst-fetch = { workspace = true }
sst-buffer = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
curl = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
