[package]
name = "sst-fetch"
version = "0.1.0"
edition = "2024"

[features]
default = ["s3"]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
