[package]
name = "sst-python"
version = "0.1.0"
edition = "2024"

[lib]
name = "safetensors_streaming"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
sst-core = { workspace = true }
sst-fetch = { workspace = true }
sst-buffer = { workspace = true }
sst-types = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
